# linked-data-core

./: .gitignore  Cargo.toml  README.md
src/: attributes.rs  enum.rs  lib.rs  prefix_mappings.rs  rdf_metadata.rs  struct.rs
src/attributes/: ast.rs  field.rs  parse.rs  type.rs  variant.rs
