[package]
name = "linked-data-core"
version = "0.1.0"
edition = "2024"

[dependencies]
iref = { version = "3.2.2", features = ["serde"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
quote = "1.0.40"
serde_tokenstream = "0.2.2"
snafu = "0.8.5"
syn = { version = "2.0.100", features = ["visit", "extra-traits"] }
